2003-10-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnmail.el (nnmail-article-group): Default to "bogus".

	* mail-source.el (mail-source-delete-incoming): Change to nil.

2003-10-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mail-source.el (mail-source-fetch-imap): Fix mismatched parens.

2003-10-16  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mail-source.el (defvar): Add post/pre/scripts.
	(mail-source-fetch-imap): Use them.

	* nndraft.el (nndraft-request-move-article): Fix infinite
	recursion. 

	* gnus-group.el (gnus-group-mark-regexp): Jump to groups.

2003-10-16  Ed L. Cashin  <ecashin@uga.edu>

	* imap.el (imap-interactive-login): Set imap-password to nil if
	login fails.

2003-10-16  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-inserted-headers): New variable.
	(message-mode): Make local.
	(message-mode): Set all the local action variables to nil.	

2003-10-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decode.el (mm-inline-text-html-with-images): Doc fix.
	(mm-w3m-safe-url-regexp): Doc fix.

2003-10-12  Jesper Harder  <harder@ifa.au.dk>

	* gnus-sum.el (gnus-summary-respool-query): Don't narrow to head,
	it's done by nnmail-article-group.

	* gnus-uu.el (gnus-uu-grab-articles): Fix misplaced parens.
	From Mark Hood <markhood@speakeasy.net> (tiny change)

2003-10-10  Jesper Harder  <harder@ifa.au.dk>

	* mm-decode.el (mm-file-name-delete-gotchas): Avoid infloop in
	XEmacs.

2003-10-10  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-initialize): new function, does the spam-face
	update and all the hooks, replaces spam-install-hooks-function

	* gnus-registry.el (gnus-registry-initialize): new autoloaded
	function to explicitly initialize the registry

2003-10-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decode.el (mm-w3m-safe-url-regexp): Doc fix.

	* mm-view.el (mm-w3m-mode-map): Doc fix.
	(mm-inline-text-html-render-with-w3m): Add a comment.

2003-10-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>
